Fixed Jumping Glitch

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,6 @@
 body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
-  background: #a7a7a7;
-  background-image: linear-gradient(15deg, #ffffff, #a1a1a1);
   height: 100vh;
 }
 @media only screen and (max-width: 600px) {
@@ -24,9 +22,7 @@ button {
   margin: 5px;
   padding: 3px;
   width: 130px;
-
   border-radius: 4px;
-
   box-shadow: white 0px 0px 2px;
   font-size: 12px;
   cursor: pointer;
@@ -60,10 +56,9 @@ button:hover {
   margin: 10px;
 }
 .header {
-  border-bottom: 5px solid rgb(100, 100, 100);
-  box-shadow: inset black 0px 0px 46px;
   width: 100%;
   padding-top: 10px;
+  box-shadow: 2px 2px 10px #afafaf;
   padding-bottom: 10px;
   display: flex;
   flex-wrap: wrap;
@@ -87,16 +82,16 @@ button:hover {
   opacity: 0;
   color: white;
   text-align: center;
-  font-size: 20px;
+  font-size: 18px;
   font-family: monospace;
   font-weight: bold;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 85px;
+  width: 105px;
   height: 80px;
   margin: 15px;
-  background: #f0f0f086;
+  background: #313131;
   border: 4px solid #6e6e6e65;
   box-shadow: #b1b1b1 2px 4px 20px;
   border-radius: 10px;
@@ -117,6 +112,7 @@ button:hover {
 .ArrayContainer {
   width: 100%;
   align-items: flex-end;
+  height: 50vh;
   display: flex;
   justify-content: center;
 }
